# docs

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  environment.yml  pyproject.toml
.claude/: settings.json
.claude/docs/: paper-index.md  recategorise.md
.claude/skills/: README-browser.md  add-book.md  add-paper.md  add-post.md  backtest-to-gridsearch.md  convert-to-grid-search.md  tweet-content.md
.github/workflows/: build-and-deploy-dcos.yml  build-and-deploy-docs-dev.yml  build-and-deploy-docs.yml  deploy-docs-test.yml  rsync-docs.yml  test.yml
articles/: index.json  jumpmodels-references.md
experiments/: jumpmodels-btc-eth-regime-filter.md  orderbook-geometry-midfreq-signals.md  tenseg-binance-btc-eth-reproduction.md
scraper/: README.md  config.json  secrect.env
scripts/: backup-papers.sh  build.bash  check-rst-tables.py  fetch-missing-papers.sh  fetch-scihub-selenium.py  fetch-scihub.sh  update-deps.sh
source/: conf.py  getting-started.rst  glossary.rst  home.rst  index.rst  learn.html  learn.rst  notes.txt
source/_static/: custom.css  custom.js
source/_tags/: advanced.rst  alpha-model.rst  bollinger-bands.rst  debugging.rst  ema.rst  fee-analysis.rst  get-started.rst  grid-search.rst  live-strategy.rst  mean-reversion.rst  momentum.rst  multipair.rst  old.rst  rsi.rst  sma.rst  stop-loss.rst  synthetic-data.rst  tagsindex.rst  template.rst  trend-analysis.rst
source/_templates/: base.html  module-ta.rst  page.html  searchbox.html
source/api/: index.rst  web3.rst
source/architecture/: architecture.rst  cli.rst  index.rst  live-trading.rst  serialisation.rst  unit-testing.rst  webhook.rst
source/deployment/: backtest-vs-live-execution.rst  docker-images.rst  hot-wallet-deployment.rst  index.rst  lagoon-vault.rst  live-trading.rst  metadata.rst  monitoring.rst  repair.rst  strategy-deployment.rst  trade-executor.rst  troubleshooting.rst  vault-deployment.html  vault-deployment.rst  velvet-portfolio.rst  wallet-operations.rst
source/learn/: additional-resources.rst  ai-and-machine-learning.rst  algorithmic-trading-frameworks.rst  algorithmic-trading.rst  backtesting.rst  blog-posts.rst  books.rst  carry-trade.rst  charting-solutions.rst  code-repositories.rst  communities.rst  conference-presentations.rst  courses.rst  cryptocurrency.rst  defi-amm.rst  equity-factors.rst  index.rst  influencers.rst  jupyter-notebook.rst  liquidity-provision.rst  machine-learning.rst  market-microstructure.rst  market-regimes.rst  mean-reversion.rst  momentum.rst  order-flow.rst  papers-stat-arb.rst  papers.rst  portfolio-construction-model.rst  portfolio-construction.rst  python.rst  reinforcement-learning.rst  risk-management.rst  signal-decomposition.rst  statistical-arbitrage.rst  technical-indicators.rst  time-series.rst  trend-following.rst  tutorials.rst  volatility.rst
source/overview/: about.rst  defi-vault-data.rst  glossary.rst  index.rst  market-data-feeds.rst  market-data-fees.rst  oracles.rst  supported-markets.rst  tooling.rst  wrapped-tokens.rst
source/programming/: binder-development.rst  development.rst  example-trading-strategies.rst  index.rst  learn.rst  troubleshooting.rst  visual-studio-code.rst
source/protocol/: comparison.rst  index.rst  overview.rst
source/running/: architecture.rst  backtesting.rst  index.rst  live-trading.rst  (+5 more)
trading_strategy_docs/: __init__.py  sphinx_render_patch.py  sphinx_sitemap_patch.py
(+104 files in other folders)
